@@ -1,4 +1,4 @@
 DOS2UNIX_VERSION = 6.0.3-beta2
 DOS2UNIX_VERSION_SHORT = 603b2
-DOS2UNIX_DATE = 2012-09-19
+DOS2UNIX_DATE = 2013-01-16
 DOS2UNIX_AUTHOR = 'Erwin Waterlander'
